--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>EE Legal Consult</title>
+    <meta name="google-site-verification" content="WjtU5oHAMNZzkIpRVi3zvOge6tFm6_iyFjix_GoFsD8" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
